# aligned

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
ci/: install.sh  script.sh
src/: lib.rs  sealed.rs
